# gl-epka-bot

./: README.md  pyproject.toml
app/: config.py
