[tool.poetry]
name = "gl-epka-bot"
version = "0.1.0"
description = "This is my pet project just to show how brillaint programer i am"
authors = ["gl_epka <nechaevgleb@inbox.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
web3 = "^7.13.0"
fastapi = "^0.116.1"
pydantic = "^2.11.8"
pydantic-settings = "^2.10.1"
aiosqlite = "^0.21.0"
uvicorn = "^0.35.0"
jinja2 = "^3.1.6"
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
